import("//build/config/features.gni")
import("//build/config/ui.gni")
import("//build/config/crypto.gni")
import("//extensions/features/features.gni")
import("//media/media_options.gni")
import("//ppapi/features/features.gni")
import("//printing/features/features.gni")
import("//rlz/features/features.gni")

config("chromium_src_config") {
  include_dirs = [
    "//electron/chromium_src",
    "//electron",
    "//electron/vendor",
    "//electron/vendor/brightray",
    rebase_path(".", "//"),
    root_gen_dir,
    "$root_gen_dir/chrome",
    "$root_gen_dir/components/strings",
    "//skia/config",
    "//third_party/boringssl/src/include",
    "//third_party/skia/include/core",
  ]

  if (is_clang) {
    cflags = [
      "-Wno-error",
      "-Wno-unknown-warning-option",
      "-Wno-parentheses-equality",
      "-Wno-unused-function",
      "-Wno-sometimes-uninitialized",
      "-Wno-pointer-sign",
      "-Wno-sign-compare",
      "-Wno-string-plus-int",
      "-Wno-unused-variable",
      "-Wno-deprecated-declarations",
      "-Wno-return-type",
      "-Wno-gnu-folding-constant",
      "-Wno-shift-negative-value",
      "-Wno-varargs", # https://git.io/v6Olj
      "-Wno-deprecated-declarations",
      "-Wno-deprecated-register",
      "-Wno-unused-private-field",
      "-Wno-unused-function",
    ]
  }
}

source_set("debug") {
  public_configs = [ ":chromium_src_config" ]

  include_dirs = [
    # force this to appear before the chromium root src dir
    ".",
  ]

  sources = [
    "net/test/embedded_test_server/stream_listen_socket.cc",
    "net/test/embedded_test_server/stream_listen_socket.h",
    "net/test/embedded_test_server/tcp_listen_socket.cc",
    "net/test/embedded_test_server/tcp_listen_socket.h",
  ]
}

source_set("common") {
  configs += [
    ":chromium_src_config",
    "//electron/build:electron_config",
  ]

  include_dirs = [
    # force this to appear before the chromium root src dir
    ".",
  ]

  sources = []
  deps = []

  if (enable_extensions) {
    sources += [
      "chrome/common/extensions/chrome_extensions_client.cc",
      "chrome/common/extensions/chrome_extensions_client.h",
    ]

    deps += [
      "//electron/brave/common/extensions/api:extensions_features"
    ]
  }

  deps += [
    "//chrome/common",
  ]
}

source_set("renderer") {
  configs += [ ":chromium_src_config" ]

  include_dirs = [
    # force this to appear before the chromium root src dir
    ".",
  ]

  sources = [
    "chrome/renderer/content_settings_observer.cc",
    "chrome/renderer/content_settings_observer.h",
  ]

  if (enable_extensions) {
    sources += [
      "chrome/renderer/extensions/chrome_extensions_dispatcher_delegate.cc",
      "chrome/renderer/extensions/chrome_extensions_dispatcher_delegate.h",
    ]
  }

  deps = [
    "//chrome/renderer",
    "//components/content_settings/core/common",
    "//third_party/WebKit/public:blink_headers",
  ]
}

source_set("browser") {
  configs += [ ":chromium_src_config" ]

  include_dirs = [
    # force this to appear before the chromium root src dir
    ".",
  ]

  public_deps = []
  deps = [
    ":devtools",
    ":importer",
    ":sessions",
    "//electron/brave/browser:tab_manager",
    "//chrome/common",
    "//chrome/utility",
    "//components/certificate_transparency",
    "//components/data_usage/core",
    "//components/prefs",
    "//components/ssl_config",
    "//content/public/browser",
    "//electron/atom/browser",
  ]

  sources = [
    "//chrome/browser/browser_process.cc",
    "//chrome/browser/browser_process.h",
    "chrome/browser/browser_process_impl.cc",
    "chrome/browser/browser_process_impl.h",
    "chrome/browser/browser_shutdown.cc",
    "chrome/browser/chrome_notification_types.h",
    "chrome/browser/custom_handlers/protocol_handler_registry.cc",
    "chrome/browser/custom_handlers/protocol_handler_registry_factory.cc",

    # extensions
    "//chrome/browser/extensions/global_shortcut_listener.cc",
    "//chrome/browser/extensions/global_shortcut_listener.h",
    "//chrome/browser/extensions/global_shortcut_listener_mac.h",
    "//chrome/browser/extensions/global_shortcut_listener_mac.mm",
    "//chrome/browser/extensions/global_shortcut_listener_win.cc",
    "//chrome/browser/extensions/global_shortcut_listener_win.h",

    "//chrome/browser/lifetime/keep_alive_registry.cc",
    "//chrome/browser/lifetime/keep_alive_registry.h",
    "//chrome/browser/lifetime/keep_alive_types.cc",
    "//chrome/browser/lifetime/keep_alive_types.h",
    "//chrome/browser/lifetime/scoped_keep_alive.cc",
    "//chrome/browser/lifetime/scoped_keep_alive.h",

    "chrome/browser/media/webrtc/media_capture_devices_dispatcher.cc",
    "chrome/browser/media/webrtc/media_capture_devices_dispatcher.h",
    "chrome/browser/media/webrtc/media_stream_capture_indicator.cc",
    "chrome/browser/media/webrtc/media_stream_capture_indicator.h",

    "//chrome/browser/site_details.cc",
    "//chrome/browser/site_details.h",
    "//chrome/browser/ui/browser_finder.cc",
    "//chrome/browser/ui/browser_finder.h",
    "//chrome/browser/ui/browser_list.cc",
    "//chrome/browser/ui/browser_list.h",
    "chrome/browser/ui/browser.cc",
    "chrome/browser/ui/browser.h",
    "chrome/browser/ui/browser_otr_state.cc",

    "chrome/browser/ui/webui/chrome_web_ui_controller_factory.cc",
    "chrome/browser/ui/webui/chrome_web_ui_controller_factory.h",

    "chrome/browser/process_singleton_posix.cc",
    "chrome/browser/process_singleton_win.cc",
    "chrome/browser/process_singleton.h",
    "//chrome/browser/renderer_host/chrome_extension_message_filter.cc",
    "//chrome/browser/renderer_host/chrome_extension_message_filter.h",
    "//chrome/browser/speech/tts_controller.h",
    "//chrome/browser/speech/tts_controller_impl.cc",
    "//chrome/browser/speech/tts_controller_impl.h",
    "//chrome/browser/speech/tts_linux.cc",
    "//chrome/browser/speech/tts_mac.mm",
    "//chrome/browser/speech/tts_message_filter.cc",
    "//chrome/browser/speech/tts_message_filter.h",
    "//chrome/browser/speech/tts_platform.cc",
    "//chrome/browser/speech/tts_platform.h",
    "//chrome/browser/speech/tts_win.cc",
    "chrome/browser/ui/browser_dialogs.h",
    "//chrome/browser/ui/cocoa/color_chooser_mac.mm",
    "//chrome/browser/ui/zoom/chrome_zoom_level_prefs.cc",
    "//chrome/browser/ui/zoom/chrome_zoom_level_prefs.h",
    "//chrome/browser/content_settings/cookie_settings_factory.cc",
    "//chrome/browser/content_settings/cookie_settings_factory.h",
    "chrome/browser/content_settings/host_content_settings_map_factory.cc",
    "chrome/browser/content_settings/host_content_settings_map_factory.h",
    "//chrome/browser/printing/print_job.cc",
    "//chrome/browser/printing/print_job.h",
    "//chrome/browser/printing/print_job_manager.cc",
    "//chrome/browser/printing/print_job_manager.h",
    "//chrome/browser/printing/print_job_worker.cc",
    "//chrome/browser/printing/print_job_worker.h",
    "//chrome/browser/printing/print_job_worker_owner.cc",
    "//chrome/browser/printing/print_job_worker_owner.h",
    "chrome/browser/printing/print_preview_message_handler.cc",
    "chrome/browser/printing/print_preview_message_handler.h",
    "//chrome/browser/printing/print_view_manager_base.cc",
    "//chrome/browser/printing/print_view_manager_base.h",
    "//chrome/browser/printing/print_view_manager_basic.cc",
    "//chrome/browser/printing/print_view_manager_basic.h",
    "//chrome/browser/printing/print_view_manager_common.cc",
    "//chrome/browser/printing/print_view_manager_common.h",
    "//chrome/browser/printing/printer_query.cc",
    "//chrome/browser/printing/printer_query.h",
    "//chrome/browser/printing/printing_message_filter.cc",
    "//chrome/browser/printing/printing_message_filter.h",
    "chrome/browser/ssl/security_state_tab_helper.cc",
    "chrome/browser/ssl/security_state_tab_helper.h",
    "//chrome/browser/tab_contents/tab_util.cc",
    "//chrome/browser/tab_contents/tab_util.h",
    "//chrome/browser/win/chrome_process_finder.cc",
    "//chrome/browser/win/chrome_process_finder.h",
  ]

  if (is_win) {
    sources += [
      "//chrome/browser/ui/views/color_chooser_dialog.cc",
      "//chrome/browser/ui/views/color_chooser_dialog.h",
      "chrome/browser/ui/views/color_chooser_win.cc",
      "//chrome/browser/printing/pdf_to_emf_converter.cc",
      "//chrome/browser/printing/pdf_to_emf_converter.h",
      "//chrome/browser/ui/views/certificate_viewer_win.cc",
    ]

    deps += [
      "//ui/shell_dialogs",
    ]
    libs = [
      "cryptui.lib",
    ]
  }

  if (is_linux) {
    sources += [
      "//chrome/browser/extensions/global_shortcut_listener_x11.cc",
      "//chrome/browser/extensions/global_shortcut_listener_x11.h",
    ]
  }

  if (is_mac) {
    sources += [
      "//chrome/browser/ui/certificate_viewer_mac.h",
      "//chrome/browser/ui/certificate_viewer_mac.mm",
    ]
    libs = [
      "SecurityInterface.framework",
    ]
  }

  if (use_nss_certs) {
    sources += [
      "chrome/browser/certificate_manager_model.cc",
      "chrome/browser/certificate_manager_model.h"
    ]
  }

  if (enable_basic_printing || enable_print_preview) {
    deps += [
      "//components/printing/browser",
      "//printing",
    ]
  }

  if (enable_webrtc) {
    sources += [
      "chrome/browser/media/webrtc/desktop_media_list.h",
      "chrome/browser/media/webrtc/desktop_media_list_observer.h",
      "chrome/browser/media/webrtc/native_desktop_media_list.cc",
      "chrome/browser/media/webrtc/native_desktop_media_list.h",
    ]

    public_deps += [
      "//third_party/libyuv",
      "//third_party/webrtc/modules/desktop_capture",
    ]
  }

  if (enable_plugins) {
    sources += [
      "//chrome/browser/renderer_host/pepper/chrome_browser_pepper_host_factory.cc",
      "//chrome/browser/renderer_host/pepper/chrome_browser_pepper_host_factory.h",
      "//chrome/browser/renderer_host/pepper/device_id_fetcher.cc",
      "//chrome/browser/renderer_host/pepper/device_id_fetcher.h",
      "//chrome/browser/renderer_host/pepper/monitor_finder_mac.h",
      "//chrome/browser/renderer_host/pepper/monitor_finder_mac.mm",
      "//chrome/browser/renderer_host/pepper/pepper_broker_message_filter.cc",
      "//chrome/browser/renderer_host/pepper/pepper_broker_message_filter.h",
      "//chrome/browser/renderer_host/pepper/pepper_flash_browser_host.cc",
      "//chrome/browser/renderer_host/pepper/pepper_flash_browser_host.h",
      "//chrome/browser/renderer_host/pepper/pepper_flash_clipboard_message_filter.cc",
      "//chrome/browser/renderer_host/pepper/pepper_flash_clipboard_message_filter.h",
      "//chrome/browser/renderer_host/pepper/pepper_flash_drm_host.cc",
      "//chrome/browser/renderer_host/pepper/pepper_flash_drm_host.h",
      "//chrome/browser/renderer_host/pepper/pepper_isolated_file_system_message_filter.cc",
      "//chrome/browser/renderer_host/pepper/pepper_isolated_file_system_message_filter.h",
      "//chrome/browser/renderer_host/pepper/pepper_platform_verification_message_filter.cc",
      "//chrome/browser/renderer_host/pepper/pepper_platform_verification_message_filter.h",
      "//chrome/browser/pepper_flash_settings_manager.cc",
      "//chrome/browser/pepper_flash_settings_manager.h",
      "//chrome/browser/plugins/chrome_plugin_service_filter.cc",
      "//chrome/browser/plugins/chrome_plugin_service_filter.h",
      "//chrome/browser/plugins/flash_temporary_permission_tracker.cc",
      "//chrome/browser/plugins/flash_temporary_permission_tracker.h",
      "//chrome/browser/plugins/flash_temporary_permission_tracker_factory.cc",
      "//chrome/browser/plugins/flash_temporary_permission_tracker_factory.h",
      "//chrome/browser/plugins/plugin_finder.cc",
      "//chrome/browser/plugins/plugin_finder.h",
      "//chrome/browser/plugins/plugin_info_message_filter.cc",
      "//chrome/browser/plugins/plugin_info_message_filter.h",
      "//chrome/browser/plugins/plugin_metadata.cc",
      "//chrome/browser/plugins/plugin_metadata.h",
      "//chrome/browser/plugins/plugin_prefs.cc",
      "//chrome/browser/plugins/plugin_prefs.h",
      "//chrome/browser/plugins/plugin_prefs_factory.cc",
      "//chrome/browser/plugins/plugin_prefs_factory.h",
      "//chrome/browser/plugins/plugin_utils.cc",
      "//chrome/browser/plugins/plugin_utils.h",
      "//chrome/browser/plugins/plugins_field_trial.cc",
      "//chrome/browser/plugins/plugins_field_trial.h",
    ]

    if (enable_extensions) {
      sources += [
        "chrome/browser/extensions/extension_util.cc",
        "chrome/browser/extensions/extension_util.h",
        "chrome/browser/extensions/extension_tab_util.cc",
        "chrome/browser/extensions/extension_tab_util.h",
        "//chrome/browser/extensions/api/messaging/extension_message_port.cc",
        "//chrome/browser/extensions/api/messaging/extension_message_port.h",
        "//chrome/browser/extensions/api/messaging/message_property_provider.cc",
        "//chrome/browser/extensions/api/messaging/message_property_provider.h",
        "//chrome/browser/extensions/api/messaging/message_service.cc",
        "//chrome/browser/extensions/api/messaging/message_service.h",
        "//chrome/browser/extensions/api/messaging/native_message_port.cc",
        "//chrome/browser/extensions/api/messaging/native_message_port.h",
        "//chrome/browser/extensions/api/messaging/native_messaging_host_manifest.cc",
        "//chrome/browser/extensions/api/messaging/native_messaging_host_manifest.h",
        "//chrome/browser/extensions/api/messaging/native_messaging_policy_handler.cc",
        "//chrome/browser/extensions/api/messaging/native_messaging_policy_handler.h",
        "//chrome/browser/extensions/api/messaging/native_message_process_host.cc",
        "//chrome/browser/extensions/api/messaging/native_message_process_host.h",
        "//chrome/browser/extensions/api/messaging/native_process_launcher.cc",
        "//chrome/browser/extensions/api/messaging/native_process_launcher.h",
        "//chrome/browser/extensions/api/messaging/native_process_launcher_posix.cc",
        "//chrome/browser/extensions/api/messaging/native_process_launcher_win.cc",
        "//chrome/browser/extensions/event_router_forwarder.cc",
        "//chrome/browser/extensions/event_router_forwarder.h",
      ]

      deps += [
        "//extensions/browser",
        "//rlz/features",
      ]
    }
    if (use_aura) {
      sources += [
        "//chrome/browser/ui/views/color_chooser_aura.cc",
        "//chrome/browser/ui/views/color_chooser_aura.h"
      ]
    }
    if (is_linux) {
      sources += [
        "//electron/chromium_src/chrome/browser/ui/views/frame/global_menu_bar_registrar_x11.cc",
        "//electron/chromium_src/chrome/browser/ui/views/frame/global_menu_bar_registrar_x11.h"
      ]
    }

    public_deps += [
      "//ppapi/host",
      "//ppapi/proxy",
    ]
  }
}

source_set("devtools") {
  configs += [ ":chromium_src_config" ]
  include_dirs = [ "." ] # force this to appear before the chromium src dir
  sources = [
    # devtools
    "//chrome/browser/devtools/devtools_network_conditions.cc",
    "//chrome/browser/devtools/devtools_network_conditions.h",
    "//chrome/browser/devtools/devtools_network_controller.cc",
    "//chrome/browser/devtools/devtools_network_controller.h",
    "//chrome/browser/devtools/devtools_network_controller_handle.cc",
    "//chrome/browser/devtools/devtools_network_controller_handle.h",
    "//chrome/browser/devtools/devtools_network_interceptor.cc",
    "//chrome/browser/devtools/devtools_network_interceptor.h",
    "//chrome/browser/devtools/devtools_network_protocol_handler.cc",
    "//chrome/browser/devtools/devtools_network_protocol_handler.h",
    "//chrome/browser/devtools/devtools_network_transaction_factory.cc",
    "//chrome/browser/devtools/devtools_network_transaction_factory.h",
    "//chrome/browser/devtools/devtools_network_transaction.cc",
    "//chrome/browser/devtools/devtools_network_transaction.h",
    "//chrome/browser/devtools/devtools_network_upload_data_stream.cc",
    "//chrome/browser/devtools/devtools_network_upload_data_stream.h",
    "//chrome/browser/devtools/devtools_protocol.cc",
    "//chrome/browser/devtools/devtools_protocol.h",
    "$root_gen_dir/chrome/browser/devtools/devtools_protocol_constants.cc",
    "$root_gen_dir/chrome/browser/devtools/devtools_protocol_constants.h",
  ]

  configs += [
    "//build/config/compiler:no_size_t_to_int_warning",
    "//build/config/compiler:wexit_time_destructors",
    "//build/config:precompiled_headers",
  ]

  deps = [
    "//base",
    "//content/public/browser",
    "//net",
    "//third_party/WebKit/public:features",
    "//ui/events:dom_keycode_converter",
    "//chrome/browser/devtools:devtools_protocol_constants",
  ]
}

source_set("importer") {
  configs += [ ":chromium_src_config" ]
  include_dirs = [ "." ] # force this to appear before the chromium src dir
  sources = [
    "chrome/browser/importer/external_process_importer_client.cc",
    "chrome/browser/importer/external_process_importer_client.h",
    "chrome/browser/importer/external_process_importer_host.cc",
    "chrome/browser/importer/external_process_importer_host.h",
    "//chrome/browser/importer/firefox_profile_lock.cc",
    "//chrome/browser/importer/firefox_profile_lock.h",
    "//chrome/browser/importer/firefox_profile_lock_posix.cc",
    "//chrome/browser/importer/firefox_profile_lock_win.cc",
    "chrome/browser/importer/importer_list.cc",
    "//chrome/browser/importer/importer_list.h",
    "//chrome/browser/importer/importer_lock_dialog.h",
    "//chrome/browser/importer/importer_progress_observer.h",
    "chrome/browser/importer/importer_uma.cc",
    "//chrome/browser/importer/importer_uma.h",
    "chrome/browser/importer/in_process_importer_bridge.cc",
    "chrome/browser/importer/in_process_importer_bridge.h",
    "chrome/browser/importer/profile_writer.h",
  ]

  deps = [
    "//electron/atom/browser",
  ]
}

source_set("tab_manager") {
  configs += [ ":chromium_src_config" ]
  configs += [ "//build/config/compiler:no_size_t_to_int_warning" ]

  include_dirs = [ "." ] # force this to appear before the chromium src dir
  sources = [
    "//chrome/browser/engagement/site_engagement_metrics.cc",
    "//chrome/browser/engagement/site_engagement_metrics.h",
    "//chrome/browser/engagement/site_engagement_score.cc",
    "//chrome/browser/engagement/site_engagement_score.h",
    "chrome/browser/engagement/site_engagement_service.cc",
    "chrome/browser/lifetime/application_lifetime.cc",
    "//chrome/browser/memory/oom_memory_details.cc",
    "//chrome/browser/memory/oom_memory_details.h",
    "//chrome/browser/memory/tab_manager.cc",
    "//chrome/browser/memory/tab_manager.h",
    "//chrome/browser/memory/tab_manager_web_contents_data.cc",
    "//chrome/browser/memory/tab_manager_web_contents_data.h",
    "//chrome/browser/memory/tab_stats.cc",
    "//chrome/browser/memory/tab_stats.h",
    "//chrome/browser/memory_details.cc",
    "//chrome/browser/memory_details.h",
    "//chrome/browser/memory_details_linux.cc",
    "//chrome/browser/memory_details_mac.cc",
    "//chrome/browser/memory_details_win.cc",
    "//chrome/browser/ui/browser_tab_strip_tracker.cc",
    "//chrome/browser/ui/browser_tab_strip_tracker.h",
    "chrome/browser/ui/tabs/tab_strip_model.cc",
    "//chrome/browser/ui/tabs/tab_strip_model_observer.cc",
    "//chrome/browser/ui/tabs/tab_strip_model_observer.h",
    "//chrome/browser/ui/tab_contents/tab_contents_iterator.cc",
    "//chrome/browser/ui/tab_contents/tab_contents_iterator.h",
  ]

  public_deps = [
    "//chrome/browser/engagement:mojo_bindings",
    "//chrome/common",
    "//third_party/WebKit/public:blink_headers",
  ]
}

source_set("sessions") {
  configs += [ ":chromium_src_config" ]
  include_dirs = [ "." ] # force this to appear before the chromium src dir
  sources = [
    "chrome/browser/profiles/incognito_helpers.cc",
    "chrome/browser/profiles/incognito_helpers.h",
    "chrome/browser/profiles/profile.cc",
    "chrome/browser/profiles/profile.h",
    "chrome/browser/profiles/profile_io_data.cc",
    "chrome/browser/profiles/profile_io_data.h",
    "chrome/browser/profiles/profile_manager.cc",
    "chrome/browser/profiles/profile_manager.h",
    "chrome/browser/profiles/profiles_state.cc",
    "chrome/browser/profiles/profiles_state.h",
    "//chrome/browser/sessions/session_tab_helper.cc",
    "//chrome/browser/sessions/session_tab_helper.h",
  ]

  deps = [
    "//content/public/browser",
    "//third_party/icu",
    "//third_party/protobuf:protobuf_lite",
  ]
}
